--- a/KKVideoPlayer/Controls/PlaylistPanelControl.xaml
+++ b/KKVideoPlayer/Controls/PlaylistPanelControl.xaml
@@ -20,6 +20,7 @@
                                 Padding="2" SnapsToDevicePixels="true">
                             <ContentPresenter />
                         </Border>
+                        
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsSelected" Value="true">
                                 <Setter TargetName="_Border" Property="BorderBrush" Value="gray"/>
@@ -32,6 +33,9 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
+
+            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+            <Setter Property="VerticalContentAlignment" Value="Stretch" />
         </Style>
         
         <!-- Data Templates -->
@@ -284,7 +288,7 @@
 
             <Border BorderThickness="1.5" BorderBrush="{StaticResource FontForegroundBrush}" CornerRadius="2">
                 <DockPanel LastChildFill="True">
-                    <Grid Height="15" DockPanel.Dock="Top"> 
+                    <Grid Height="15" DockPanel.Dock="Top">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="15" />
                         </Grid.RowDefinitions>
@@ -325,14 +329,7 @@
                             </Popup>
                         </StackPanel>
                     </Grid>
-                    <!--
-                    <ffmepl:DraggablePopup IsOpen="False" StaysOpen="True" AllowsTransparency="True" PreviewKeyDown="PlaylistRightClickPopup_PreviewKeyDown"
-                           PopupAnimation="Slide" Placement="MousePoint" VerticalOffset="0" HorizontalOffset="0" DockPanel.Dock="Top" x:Name="PlaylistRightClickPopup">
-                        <Popup.Resources>
-                        </Popup.Resources>
-                        <controls:VideoControl />
-                    </ffmepl:DraggablePopup>
-                    -->
+                    
                     <ListBox x:Name="FileList" SelectionMode="Extended" BorderBrush="Transparent"
                      Background="Transparent" ItemContainerStyle="{DynamicResource ListBoxItemStyle}"
                      ItemsSource="{Binding Playlist.EntriesView}"
@@ -355,157 +352,6 @@
                 </DockPanel>
             </Border>
             
-            <!-- The Content -->
-            <!--Grid x:Name="PlaylistPanelContentList">
-                <Grid.RowDefinitions>
-                    <RowDefinition />
-                    <RowDefinition Height="30" />
-                </Grid.RowDefinitions>
-                <ItemsControl x:Name="PlaylistItemsControl"
-                                  MaxHeight="{Binding Path=ActualHeight, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UIElement}}"
-                                  ItemsSource="{Binding Playlist.EntriesView}" 
-                                  HorizontalAlignment="Left"
-                                  VirtualizingStackPanel.IsVirtualizing="true"
-                                  VirtualizingStackPanel.VirtualizationMode="Recycling">
-                    <ItemsControl.Template>
-                        <ControlTemplate TargetType="ItemsControl">
-                            <ScrollViewer CanContentScroll="true"
-                                          VerticalScrollBarVisibility="Visible" 
-                                          HorizontalScrollBarVisibility="Hidden">
-                                <ItemsPresenter/>
-                            </ScrollViewer>
-                        </ControlTemplate>
-                    </ItemsControl.Template>
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <VirtualizingStackPanel 
-                                Width="570"
-                                Orientation="Vertical" 
-                                IsItemsHost="True" />
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate DataType="{x:Type ffmepl:CustomPlaylistEntry}">
-                            <DataTemplate.Resources>
-                                <Style TargetType="Hyperlink">
-                                    <Setter Property="Foreground" Value="Orange"/>
-                                    <Setter Property="TextDecorations" Value="Underline"/>
-                                    <Style.Triggers>
-                                        <Trigger Property="IsMouseOver" Value="True">
-                                            <Setter Property="Foreground" Value="OrangeRed"/>
-                                        </Trigger>
-                                        <Trigger Property="IsEnabled" Value="False">
-                                            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
-                                        </Trigger>
-                                        <Trigger Property="IsEnabled" Value="True">
-                                            <Setter Property="Cursor" Value="Hand"/>
-                                        </Trigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </DataTemplate.Resources>
-                            <Border Margin="0,4,0,0" HorizontalAlignment="Left" Width="570">
-                                <Border.Style>
-                                    <Style TargetType="Border">
-                                        <Setter Property="Background">
-                                            <Setter.Value>
-                                                <SolidColorBrush Color="#ee1f1f1f"/>
-                                            </Setter.Value>
-                                        </Setter>
-                                        <Style.Triggers>
-                                            <EventTrigger RoutedEvent="Border.MouseEnter">
-                                                <BeginStoryboard>
-                                                    <Storyboard>
-                                                        <ColorAnimation 
-                                                                Duration="0:0:0.25" To="#ee000000"
-                                                                Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" />
-                                                    </Storyboard>
-                                                </BeginStoryboard>
-                                            </EventTrigger>
-                                            <EventTrigger RoutedEvent="Border.MouseLeave">
-                                                <BeginStoryboard>
-                                                    <Storyboard>
-                                                        <ColorAnimation 
-                                                                Duration="0:0:0.10" To="#ee1f1f1f"
-                                                                Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)" />
-                                                    </Storyboard>
-                                                </BeginStoryboard>
-                                            </EventTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Border.Style>
-
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto" />
-                                        <ColumnDefinition Width="*" />
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="72" />
-                                    </Grid.RowDefinitions>
-
-                                    <Border>
-                                        <Button 
-                                                Cursor="Hand" Width="128"
-                                                Command="{Binding Source={StaticResource ViewModel}, Path=Commands.OpenCommand}"
-                                                CommandParameter="{Binding MediaSource}">
-                                            <Button.Template>
-                                                <ControlTemplate>
-                                                    <Grid Background="Transparent">
-                                                        <Viewbox Margin="14">
-                                                            <Path Stretch="Uniform" Data="{Binding Source={StaticResource MediaIcon}, Path=Data}" Fill="#444444" />
-                                                        </Viewbox>
-                                                        <Image Stretch="Uniform" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-                                                                        Source="{Binding Path=Thumbnail, IsAsync=True, Converter={StaticResource PlaylistEntryThumbnailConverter}}"></Image>
-                                                    </Grid>
-                                                </ControlTemplate>
-                                            </Button.Template>
-                                        </Button>
-                                    </Border>
-
-                                    <DockPanel Grid.Column="1" Margin="4">
-                                        <DockPanel DockPanel.Dock="Right" Width="80" LastChildFill="False">
-                                            <Button 
-                                                    DockPanel.Dock="Top"
-                                                    Style="{DynamicResource ModernButtonStyle}" 
-                                                    Command="{Binding Source={StaticResource ViewModel}, Path=Commands.OpenCommand}" 
-                                                    CommandParameter="{Binding MediaSource}">
-                                                <Path Stretch="Uniform" Data="{Binding Source={StaticResource PlayIcon}, Path=Data}" Fill="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" />
-                                            </Button>
-                                            <TextBlock DockPanel.Dock="Bottom" Text="{Binding Duration, Converter={StaticResource PlaylistDurationFormatter}}" 
-                                                            Foreground="WhiteSmoke" TextAlignment="Center" TextTrimming="CharacterEllipsis" FontSize="10"
-                                                            FontWeight="Bold" Padding="0,0,0,4" />
-                                        </DockPanel>
-
-                                        <TextBox DockPanel.Dock="Top" Text="{Binding Title}" BorderBrush="Transparent"
-                                                        Background="#00000000" Foreground="WhiteSmoke" FontWeight="Bold" FontSize="12">
-                                        </TextBox>
-
-                                        <TextBlock DockPanel.Dock="Top" Text="{Binding MediaSource}" 
-                                                        FontSize="9" ToolTip="{Binding MediaSource}" Foreground="#666" TextTrimming="CharacterEllipsis"
-                                                        Margin="4,4,4,0"/>
-                                        <TextBlock DockPanel.Dock="Top" 
-                                                        FontSize="9" Foreground="#666" TextTrimming="CharacterEllipsis"
-                                                        Margin="4,4,4,0">
-                                                        <TextBlock>Viewed on </TextBlock>
-                                                        <TextBlock FontWeight="Bold" Text="{Binding LastOpenedUtc, Converter={StaticResource UtcDateToLocalTimeString}}" />
-                                                        <TextBlock> - </TextBlock>
-                                                        <Hyperlink 
-                                                            Command="{Binding Source={StaticResource ViewModel}, Path=Commands.RemovePlaylistItemCommand}"
-                                                            CommandParameter="{Binding}">REMOVE</Hyperlink>
-                                                    </TextBlock>
-                                    </DockPanel>
-                                </Grid>
-                            </Border>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-                <Border Grid.Row="1" VerticalAlignment="Center">
-                    <TextBlock Foreground="#ccc" TextAlignment="Center" FontSize="13">
-                        <TextBlock Text="{Binding ElementName=PlaylistItemsControl, Path=ItemsSource.Count}" />
-                        <TextBlock> items in playlist.</TextBlock>
-                    </TextBlock>
-                </Border>
-            </Grid-->
         </DockPanel>
     </Border>
 </UserControl>
